# hueta

./: CMakeLists.txt  README.md  README_BRUTAL_DESIGN.md  adminview.cpp  adminview.h  brutal_style.qss  datastore.cpp  datastore.h  init_demo_data.cpp  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markdialog.cpp  markdialog.h  registrationdialog.cpp  registrationdialog.h  studentview.cpp  studentview.h  teacherview.cpp  teacherview.h  user.cpp  user.h
